# bigbroCO.-Server

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: CI CD.yml  CI.yml  Compose-ci.yml  Deploy.yml  Python3-ci.yml  apisec.yml  cd-prod.yml  cd-test.yml  cd.yml  ci.yml  codeQL.yml  codeql.yml  compose-ci.yml  deploy-stage.yml  develop-cd.yml  develop-ci.yml  (+3 more)
account/: KakaoService.py  KakaoView.py  models.py  urls.py  views.py
address/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
admin/: UploadView.py
bigbro/: healthcheck.py  settings-prod.py  settings-stage.py  settings-test.py  settings.py  urls.py  wsgi.py
bigbroServer/: asgi.py  settings.py  urls.py  wsgi.py
cart/: models.py  serializers.py  tests.py  urls.py  views.py
common/: admin.py  models.py  serializers.py  serilizers.py  urls.py  views.py
config/: hosts.py  settings.py  settings_admin.py  urls.py  urls_admin.py  utils.py  wsgi-test.py  wsgi.py
dashboard/: views.py
nginx/: default.conf
option/: admin.py  models.py  serializers.py
order/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
payments/: views.py
product/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
shopping/: apps.py  models.py  serializers.py  urls.py  views.py
store/: models.py  serializers.py  urls.py  views.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
utils/: discord.py  redis.py  utils.py
wishlist/: models.py
(+193 files in other folders)
