[tool.poetry]
name = "bigbro"
version = "0.1.0"
description = ""
authors = ["Jueuunn7 <wndmsrla1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
gunicorn = "^23.0.0"
django-environ = "^0.11.2"
drf-spectacular = "^0.27.2"
requests = "^2.32.3"
djangorestframework-simplejwt = "^5.3.1"
boto3 = "^1.35.28"
watchtower = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
